Fixed the level and component watch buttons.

--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -19,8 +19,8 @@ nav.navbar.navbar-default(role='navigation')
 
       ul.dropdown-menu
         li.dropdown-header Actions
-        li#watch-component-button
-          a
+        li
+          a#component-watch-button
             span.watch
               span.glyphicon.glyphicon-eye-open
               span.spl Watch
