--- a/app/templates/editor/level/system/edit.jade
+++ b/app/templates/editor/level/system/edit.jade
@@ -14,7 +14,7 @@ nav.navbar.navbar-default(role='navigation')
         span.glyphicon-chevron-down.glyphicon
       ul.dropdown-menu
         li.dropdown-header Actions
-        li#watch-component-button
+        li#component-watch-button
           a
             span.watch
               span.glyphicon.glyphicon-eye-open
