--- a/app/templates/editor/level/system/edit.jade
+++ b/app/templates/editor/level/system/edit.jade
@@ -7,6 +7,8 @@ nav.navbar.navbar-default(role='navigation')
       a(href="#system-config-schema" data-toggle="tab") Config Schema
     li
       a(href="#system-settings" data-toggle="tab") Settings
+    li
+      a(href="#system-patches" data-toggle="tab" data-i18n="resources.patches")#system-patches-tab Patches
 
   ul.nav.navbar-nav.navbar-right
     li.dropdown
@@ -14,15 +16,15 @@ nav.navbar.navbar-default(role='navigation')
         span.glyphicon-chevron-down.glyphicon
       ul.dropdown-menu
         li.dropdown-header Actions
-        li#component-watch-button
-          a
+        li
+          a#system-watch-button
             span.watch
               span.glyphicon.glyphicon-eye-open
               span.spl Watch
             span.unwatch.secret
               span.glyphicon.glyphicon-eye-close
               span.spl Unwatch
-        li#patch-component-button
+        li#patch-system-button
           a(data-i18n="common.submit_patch") Submit Patch
         li#create-new-system
           a(data-i18n="editor.level_system_btn_new") Create New System
@@ -41,3 +43,5 @@ nav.navbar.navbar-default(role='navigation')
     #config-schema-treema
   .tab-pane#system-settings
     #edit-system-treema
+  .tab-pane#system-patches
+    .patches-view
