Fixed the play and save buttons.

--- a/app/styles/editor/level/edit.sass
+++ b/app/styles/editor/level/edit.sass
@@ -20,6 +20,7 @@
   // custom navbar height rules
   .navbar-nav > li > a
     padding: 7px 8px 8px
+    cursor: pointer
     &:hover
       background-color: lighten($NAVBG, 10%)
   .navbar
@@ -81,4 +82,3 @@
   .treema-root
     background-color: white
     border-radius: 4px
-    
