Set up the tabs and views in the level editor to reload so that when patches are applied, their changes are visible.

--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -1,11 +1,11 @@
 nav.navbar.navbar-default(role='navigation')
   ul.nav.navbar-nav.nav-tabs
     li.active
-      a(href="#component-code" data-toggle="tab" data-i18n="general.code") Code
+      a(href="#component-code" data-toggle="tab" data-i18n="general.code")#component-code-tab Code
     li
-      a(href="#component-config-schema" data-toggle="tab" data-i18n="editor.level_component_config_schema") Config Schema
+      a(href="#component-config-schema" data-toggle="tab" data-i18n="editor.level_component_config_schema")#component-config-schema-tab Config Schema
     li
-      a(href="#component-settings" data-toggle="tab" data-i18n="editor.level_component_settings") Settings
+      a(href="#component-settings" data-toggle="tab" data-i18n="editor.level_component_settings")#component-settings-tab Settings
     li
       a(href="#component-patches" data-toggle="tab" data-i18n="resources.patches")#component-patches-tab Patches
 
