--- a/app/templates/editor/level/system/edit.jade
+++ b/app/templates/editor/level/system/edit.jade
@@ -2,11 +2,11 @@ nav.navbar.navbar-default(role='navigation')
 
   ul.nav.navbar-nav.nav-tabs
     li.active
-      a(href="#system-code" data-toggle="tab") Code
+      a(href="#system-code" data-toggle="tab")#system-code-tab Code
     li
-      a(href="#system-config-schema" data-toggle="tab") Config Schema
+      a(href="#system-config-schema" data-toggle="tab")#system-config-schema-tab Config Schema
     li
-      a(href="#system-settings" data-toggle="tab") Settings
+      a(href="#system-settings" data-toggle="tab")#system-settings-tab Settings
     li
       a(href="#system-patches" data-toggle="tab" data-i18n="resources.patches")#system-patches-tab Patches
 
