--- a/app/styles/editor/level/system/edit.sass
+++ b/app/styles/editor/level/system/edit.sass
@@ -10,3 +10,10 @@
     top: 35px
     border: 2px solid black
     border-top: none
+
+  .inner-editor
+    position: absolute
+    left: 0
+    right: 0
+    bottom: 0
+    top: 0px
