Fixed a bug, colored a badge.

--- a/app/styles/editor/level/edit.sass
+++ b/app/styles/editor/level/edit.sass
@@ -52,6 +52,9 @@
     cursor: pointer
     &:hover
       background-color: #d3d3d3
+      
+  .badge
+    background-color: green
 
   .outer-content
     background-color: $BG
