Reworked top nav. Many improvements to job profile form.

--- a/app/styles/account/settings.sass
+++ b/app/styles/account/settings.sass
@@ -44,6 +44,26 @@
   .form
     max-width: 600px
 
+#job-profile-view
+  .profile-preview-button
+    &.bottom-preview
+      margin: 15px 0 0 0
+
+  .sample-profile-thumbnail
+    margin-top: -60px
+
+  .profile-completion-progress
+    width: 100%
+    display: inline-block
+    height: 33px
+
+    .progress-bar
+      line-height: 33px
+
+  .progress-next-item
+    margin-top: -20px
+    margin-bottom: 15px
+
   #job-profile-treema
     background-color: white
 
@@ -54,3 +74,16 @@
       font-size: 14px
       line-height: 22px
       opacity: 1
+
+    .treema-row
+      padding-top: 6px
+
+    .treema-image-file
+      .btn:after
+        content: "Upload Picture"
+        margin-left: 20px
+
+      img
+        display: block
+        clear: both
+        max-width: 300px
