Sass don't like that.

--- a/app/styles/editor/level/edit.sass
+++ b/app/styles/editor/level/edit.sass
@@ -26,7 +26,8 @@
   .navbar
     min-height: 0px
     border-radius: 0
-  .navbar-right // not sure why bootstrap puts a big negative margin in, but this overrides it
+  .navbar-right
+    // not sure why bootstrap puts a big negative margin in, but this overrides it
     margin-right: 10px
     
   // custom navbar styling
