Modify links on community page

--- a/app/templates/community.jade
+++ b/app/templates/community.jade
@@ -16,13 +16,13 @@ block content
 
         ul
           li 
-            a(href="/editor", data-i18n="community.level_editor")
+            a(href="/editor/level", data-i18n="community.level_editor")
             | : fork, edit, or build your own CodeCombat levels. New levels can be kept private or published to the community.
           li 
-            a(href="/editor", data-i18n="editor.thang_title")
+            a(href="/editor/thang", data-i18n="editor.thang_title")
             | : modify or import new art assets for the game using our powerful editor.
           li 
-            a(href="/editor", data-i18n="editor.article_title")
+            a(href="/editor/article", data-i18n="editor.article_title")
             | : edit or create documentation used in CodeCombat levels.
 
       p Right now most of our editing tools are very rough, but we are improving them constantly and welcome your feedback.
