Changed moar to More

--- a/app/templates/play/ladder/ladder_tab.jade
+++ b/app/templates/play/ladder/ladder_tab.jade
@@ -41,7 +41,7 @@ div#columns.row
                 a(href="/play/level/#{level.get('slug') || level.id}/?team=#{team.otherTeam}&opponent=#{session.id}")
                   span(data-i18n="ladder.fight") Fight!
         if teamIndex == 1
-          .btn.btn-sm.load-more-ladder-entries moar
+          .btn.btn-sm.load-more-ladder-entries More
 
   div.column.col-md-4
     h4.friends-header Friends Playing
