--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -15,8 +15,28 @@ block header
         li
           a(href="/editor/level")
             span.glyphicon-home.glyphicon
+        li.dropdown#tabs-dropdown
+          a(data-toggle='dropdown')
+            span.glyphicon-chevron-down.glyphicon
+          ul.dropdown-menu
+            li.active
+              a(href="#editor-level-thangs-tab-view", data-toggle="tab", data-i18n="editor.level_tab_thangs") Thangs
+            li
+              a(href="#editor-level-scripts-tab-view", data-toggle="tab", data-i18n="editor.level_tab_scripts") Scripts
+            li
+              a(href="#editor-level-settings-tab-view", data-toggle="tab", data-i18n="editor.level_tab_settings") Settings
+            li
+              a(href="#editor-level-components-tab-view", data-toggle="tab", data-i18n="editor.level_tab_components") Components
+            li
+              a(href="#editor-level-systems-tab-view", data-toggle="tab", data-i18n="editor.level_tab_systems") Systems
+            li
+              a(href="#editor-level-patches", data-toggle="tab")#patches-tab
+                span(data-i18n="resources.patches").spr Patches
+                - var patches = level.get('patches')
+                if patches && patches.length
+                  span.badge= patches.length
+              
       ul.nav.navbar-nav.nav-tabs
-      
         li.active
           a(href="#editor-level-thangs-tab-view", data-toggle="tab", data-i18n="editor.level_tab_thangs") Thangs
         li
