--- a/app/templates/editor/level/scripts_tab.jade
+++ b/app/templates/editor/level/scripts_tab.jade
@@ -1,3 +1,6 @@
+button.navbar-toggle.toggle.btn-primary#thangs-container-toggle(type="button" data-toggle="collapse" data-target="#scripts-treema")
+  span.icon-list
+
 #scripts-treema
 
 #script-treema
