Migrated to the new email system, along with a setting for recruit notifications.

--- a/app/styles/account/settings.sass
+++ b/app/styles/account/settings.sass
@@ -43,6 +43,12 @@
     
   .form
     max-width: 600px
+    
+  #email-pane
+    #specific-notification-settings
+      padding-left: 20px
+      margin-left: 20px
+      border-left: 1px solid gray
 
 #job-profile-view
   .profile-preview-button
