--- a/app/templates/account/settings.jade
+++ b/app/templates/account/settings.jade
@@ -67,16 +67,28 @@ block content
         p
           .form
             .form-group.checkbox
-              label.control-label(for="email_announcement", data-i18n="account_settings.email_announcements") Announcements
-              input#email_announcement(name="email_announcement", type="checkbox", checked=subs.announcement)
+              label.control-label(for="email_generalNews", data-i18n="account_settings.email_announcements") Announcements
+              input#email_generalNews(name="email_generalNews", type="checkbox", checked=subs.generalNews)
               span.help-block(data-i18n="account_settings.email_announcements_description") Get emails on the latest news and developments at CodeCombat.
-
+          
+          hr
+          h4(data-i18n="account_settings.email_notifications") Notifications
+          span Controls for transactional emails, ie emails specific to your account.
+          
           .form
             .form-group.checkbox
-              label.control-label(for="email_notification", data-i18n="account_settings.email_notifications") Notifications
-              input#email_notification(name="email_notification", type="checkbox", checked=subs.notification)
-              span.help-block(data-i18n="account_settings.email_notifications_description") Get periodic notifications for your account.
-            hr
+              label.control-label(for="email_anyNotes", data-i18n="account_settings.any_notifications") Any Notifications
+              input#email_anyNotes(name="email_anyNotes", type="checkbox", checked=subs.anyNotes)
+              span.help-block(data-i18n="account_settings.email_any_notes_description") Disable to universally stop ALL notifications for this account.
+            
+            fieldset#specific-notification-settings
+  
+              .form-group.checkbox
+                label.control-label(for="email_recruitNotes", data-i18n="account_settings.recruit_notes") Recruitment Opportunities
+                input#email_recruitNotes(name="email_recruitNotes", type="checkbox", checked=subs.recruitNotes)
+                span.help-block(data-i18n="account_settings.email_recruit_notes_description") If you play really well, we may contact you about getting you a (better) job.
+
+          hr
 
           h4(data-i18n="account_settings.contributor_emails") Contributor Class Emails
           span(data-i18n="account_settings.contribute_prefix") We're looking for people to join our party! Check out the 
@@ -85,63 +97,63 @@ block content
 
           .form
             .form-group.checkbox
-              label.control-label(for="email_developer")
+              label.control-label(for="email_archmageNews")
                 span(data-i18n="classes.archmage_title")
                   | Archmage
                 |  
                 span(data-i18n="classes.archmage_title_description")
                   | (Coder)
-              input#email_developer(name="email_developer", type="checkbox", checked=subs.developer)
+              input#email_archmageNews(name="email_archmageNews", type="checkbox", checked=subs.archmageNews)
               span(data-i18n="contribute.archmage_subscribe_desc").help-block Get emails about general news and announcements about CodeCombat.
 
             .form-group.checkbox
-              label.control-label(for="email_level_creator")
+              label.control-label(for="email_artisanNews")
                 span(data-i18n="classes.artisan_title")
                   | Artisan
                 |  
                 span(data-i18n="classes.artisan_title_description")
                   | (Level Builder)
-              input#email_level_creator(name="email_level_creator", type="checkbox", checked=subs.level_creator)
+              input#email_artisanNews(name="email_artisanNews", type="checkbox", checked=subs.artisanNews)
               span(data-i18n="contribute.artisan_subscribe_desc").help-block Get emails on level editor updates and announcements.
 
             .form-group.checkbox
-              label.control-label(for="email_tester")
+              label.control-label(for="email_adventurerNews")
                 span(data-i18n="classes.adventurer_title")
                   | Adventurer
                 |  
                 span(data-i18n="classes.adventurer_title_description") 
                   | (Level Playtester)
-              input#email_tester(name="email_tester", type="checkbox", checked=subs.tester)
+              input#email_adventurerNews(name="email_adventurerNews", type="checkbox", checked=subs.adventurerNews)
               span(data-i18n="contribute.adventurer_subscribe_desc").help-block Get emails when there are new levels to test.
 
             .form-group.checkbox
-              label.control-label(for="email_article_editor")
+              label.control-label(for="email_scribeNews")
                 span(data-i18n="classes.scribe_title")
                   | Scribe
                 |  
                 span(data-i18n="classes.scribe_title_description")
                   | (Article Editor)
-              input#email_article_editor(name="email_article_editor", type="checkbox", checked=subs.article_editor)
+              input#email_scribeNews(name="email_scribeNews", type="checkbox", checked=subs.scribeNews)
               span(data-i18n="contribute.scribe_subscribe_desc").help-block Get emails about article writing announcements.
 
             .form-group.checkbox
-              label.control-label(for="email_translator")
+              label.control-label(for="email_diplomatNews")
                 span(data-i18n="classes.diplomat_title")
                   | Diplomat
                 |  
                 span(data-i18n="classes.diplomat_title_description")
                   | (Translator)
-              input#email_translator(name="email_translator", type="checkbox", checked=subs.translator)
+              input#email_diplomatNews(name="email_diplomatNews", type="checkbox", checked=subs.diplomatNews)
               span(data-i18n="contribute.diplomat_subscribe_desc").help-block Get emails about i18n developments and, eventually, levels to translate.
 
             .form-group.checkbox
-              label.control-label(for="email_support")
+              label.control-label(for="email_ambassadorNews")
                 span(data-i18n="classes.ambassador_title")
                   | Ambassador
                 |  
                 span(data-i18n="classes.ambassador_title_description")
                   | (Support)
-              input#email_support(name="email_support", type="checkbox", checked=subs.support)
+              input#email_ambassadorNews(name="email_ambassadorNews", type="checkbox", checked=subs.ambassadorNews)
               span(data-i18n="contribute.ambassador_subscribe_desc").help-block Get emails on support updates and multiplayer developments.
                   
         button.btn#toggle-all-button(data-i18n="account_settings.email_toggle") Toggle All
