Don't require CocoModel instantiation before schemas are included. Reload neutral spells on reload. Fix for adding Components to Thangs. Surface background: darkness, no parents.

--- a/app/styles/play/level.sass
+++ b/app/styles/play/level.sass
@@ -18,7 +18,7 @@ body.is-playing
     position: relative
     
   canvas#surface
-    background-color: #ddd
+    background-color: #333
     width: 100%
     display: block
     z-index: 1
