Progress towards LinkedIn integration

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -133,6 +133,9 @@ a[data-toggle="modal"]
     background-color: transparent
     margin: 0 14px
     border-bottom-color: #ccc
+  .modal-footer.linkedin
+    text-align: center
+      
 
 // Bigger versions of some Bootstrap icons
 // TODO: make the non-white versions of these if we ever need them
