--- a/app/templates/account/job_profile.jade
+++ b/app/templates/account/job_profile.jade
@@ -1,4 +1,6 @@
 h3(data-i18n="account_settings.job_profile") Job Profile
+script(type="in/Login")
+  Hello, <?js= firstName?> <?js= lastName?>.
 
 .row
   .col-md-9
