Changed responsive view for LevelEditor

--- a/app/styles/editor/level/thangs_tab.sass
+++ b/app/styles/editor/level/thangs_tab.sass
@@ -64,15 +64,6 @@ $mobile: 1050px
       margin: 0
       @media screen and (max-width: $mobile)
         margin: 5px
-        //position: absolute
-        //left: -40px
-        //top: 40px
-        
-      .btn
-        @media screen and (max-width: $mobile)
-          //float: none
-          //display: block
-          //padding: 10px
     
     h3
       margin: 0 -20px 0 0
@@ -147,6 +138,9 @@ $mobile: 1050px
       right: 18px
       z-index: 11
       width: $addPaletteWidth + 10
+      bottom: -15px
+      //height: auto
+      //padding-bottom: 10px
       
     input
       width: $addPaletteWidth
