--- a/app/templates/editor/level/components_tab.jade
+++ b/app/templates/editor/level/components_tab.jade
@@ -1,6 +1,6 @@
 .components-container
   h3(data-i18n="editor.level_component_tab_title") Current Components
-  button.navbar-toggle.toggle.btn-primary#thangs-container-toggle(type="button" data-toggle="collapse" data-target="#components-treema")
+  button.navbar-toggle.toggle.btn-primary(type="button" data-toggle="collapse" data-target="#components-treema")
     span.icon-list
   #components-treema
 
