--- a/app/templates/editor/level/scripts_tab.jade
+++ b/app/templates/editor/level/scripts_tab.jade
@@ -1,4 +1,4 @@
-button.navbar-toggle.toggle.btn-primary#thangs-container-toggle(type="button" data-toggle="collapse" data-target="#scripts-treema")
+button.navbar-toggle.toggle.btn-primary(type="button", data-toggle="collapse", data-target="#scripts-treema")
   span.icon-list
 
 #scripts-treema
