--- a/app/templates/editor/level/systems_tab.jade
+++ b/app/templates/editor/level/systems_tab.jade
@@ -1,5 +1,5 @@
 .systems-container
-  button.navbar-toggle.toggle.btn-primary#thangs-container-toggle(type="button" data-toggle="collapse" data-target="#systems-treema")
+  button.navbar-toggle.toggle.btn-primary(type="button" data-toggle="collapse" data-target="#systems-treema")
     span.icon-list
   h3(data-i18n="editor.level_systems_tab_title") Current Systems
   #systems-treema
