--- a/app/templates/editor/level/thangs_tab.jade
+++ b/app/templates/editor/level/thangs_tab.jade
@@ -1,7 +1,7 @@
 div#toggle
-  button.navbar-toggle.toggle.btn-primary#thangs-container-toggle(type="button" data-toggle="collapse" data-target="#all-thangs")
+  button.navbar-toggle.toggle.btn-primary#thangs-container-toggle(type="button", data-toggle="collapse", data-target="#all-thangs")
     span.icon-list
-button.navbar-toggle.toggle.btn-primary#thangs-palette-toggle(type="button" data-toggle="collapse" data-target="#add-thangs-column")
+button.navbar-toggle.toggle.btn-primary#thangs-palette-toggle(type="button", data-toggle="collapse", data-target="#add-thangs-column")
   span.icon-plus
 .thangs-container.thangs-column#all-thangs
   h3(data-i18n="editor.level_tab_thangs_title") Current Thangs
