--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -11,7 +11,7 @@
       &:first-child
         // Make sure that "Developer #56" doesn't wrap onto second row
         min-width: 110px
-      
+
     .tablesorter-headerAsc
       background-color: #cfc
 
@@ -27,3 +27,10 @@
       margin: 2px 0
       display: inline-block
       text-transform: lowercase
+
+    td:nth-child(3) select
+      min-width: 100px
+    td:nth-child(6) select
+      min-width: 50px
+    td:nth-child(7) select
+      min-width: 100px
