Push for george

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -135,6 +135,11 @@ a[data-toggle="modal"]
     border-bottom-color: #ccc
   .modal-footer.linkedin
     text-align: center
+    .signin-text
+      font-size: 15px
+      padding-bottom: 10px
+    .login-link
+      cursor: pointer
       
 
 // Bigger versions of some Bootstrap icons
