--- a/app/templates/modal/employer_signup_modal.jade
+++ b/app/templates/modal/employer_signup_modal.jade
@@ -4,49 +4,57 @@ block modal-header-content
   if userIsAnonymous || !userIsAuthorized
     h3(data-i18n="employer_signup.title") Sign up to hire CodeCombat players!
   else
-    h3 Hiring Contract
+    h3 CodeCombat Placement Agreement
 
 block modal-body-content
   if userIsAnonymous
-    h4(data-i18n="employer_signup.sub_heading") Let us find your next brilliant developers.
-
-    p Create an account to get started!
-    .form
-      .form-group
-        label.control-label(for="signup-email", data-i18n="general.email") Email
-        input#signup-email.form-control.input-large(name="email",type="email")
-      .form-group
-        label.control-label(for="signup-password", data-i18n="general.password") Password              
-        input#signup-password.input-large.form-control(name="password", type="password")
+    if userIsAuthorized
+      | You appear to be authorized on CodeCombat with LinkedIn. 
+    else
+      h4(data-i18n="employer_signup.sub_heading") Let us find your next brilliant developers.
+      p Create an account to get started!
+      .form
+        .form-group
+          label.control-label(for="signup-email", data-i18n="general.email") Email
+          input#signup-email.form-control.input-large(name="email",type="email")
+        .form-group
+          label.control-label(for="signup-password", data-i18n="general.password") Password              
+          input#signup-password.input-large.form-control(name="password", type="password")
   else if !userIsAuthorized
     .modal-footer.linkedin
       p Please sign into your LinkedIn account to verify your identity.
       script(type="in/Login" id="linkedInAuthButton" data-onAuth="contractCallback")
 
   else 
-    | We (CodeCombat) are providing you (the Company) access to information about our best players. In exchange, you agree to pay us 15% of the first year's annualized starting base salary for any person that you hire on a full time basis through this site. That 15% is due on the first date that our candidate is employed and is 100% refundable for 90 days after that date if the candidate doesn't remain employed at the company for any reason.
+    | Please agree to our terms before accessing our candidates.
     br
     br
+    b Who we are: 
+    | CodeCombat is a programming game that both teaches and vets programmers. If you accept this agreement, we will let you hire the most talented developers on our platform. 
+    br
+    br
+    b Placement fee: 
+    | If you hire our any of our players, you agree to pay us 15% of the candidate's first year annualized starting base salary. The fee is due on the first day that the candidate is employed and is 100% refundable for up to 90 day if the candidate doesn't remain employed at the company for any reason.
+    br
+    br
+    b Interns are free: 
     | We will not bill you for interns and part time hires (remote or onsite) hired through this site, provided they do not become full time hires within 1 year of their start date. If they do become full time hires within 1 year of their start date, we will invoice you 15% of their first year's annualized starting base salary on their first day of full time employment. For these hires, the 90 day guarantee does not apply.
     br
     br
-    | You must keep all of the information you access on this site confidential. That means you cannot share it with third parties and will only use it for recruiting.
-    br
-    br
-    | We will invoice this account via email and you agree to pay within 30 days of that email being sent. 
-    br
-    br
-    | Neither you or CodeCombat will be liable for any damages that result from this contract.
-
+    | By clicking Agree, you are agreeing to CodeCombat's Placement Agreement on behalf of your company. You also consent to CodeCombat storing basic LinkedIn profile data for verification purposes, including your name, email, public profile URL, and work history.
 block modal-footer
-  if userIsAnonymous && !userisAuthorized
-    .modal-footer.linkedin
-      b.signin-text Sign in with LinkedIn to complete the registration process.
-      script(type="in/Login" id="linkedInAuthButton" data-onAuth="contractCallback")
-      br
-      br
-      | Already have a CodeCombat account? 
-      a.login-link(data-toggle="coco-modal", data-target="modal/login") Log in to continue!
+  if userIsAnonymous   
+    if !userIsAuthorized
+      .modal-footer.linkedin
+        b.signin-text Sign in with LinkedIn to complete the registration process.
+        script(type="in/Login" id="linkedInAuthButton" data-onAuth="contractCallback")
+        br
+        br
+        | Already have a CodeCombat account? 
+        a.login-link(data-toggle="coco-modal", data-target="modal/login") Log in to continue!
+    else
+      .modal-footer.linkedin
+        a.login-link(data-toggle="coco-modal", data-target="modal/login") Please log in to continue.
   else if !userIsAnonymous && !userIsAuthorized
     .modal-footer.linkedin
       | We will record your name and work history for verification purposes.
