Various tweaks to employer signup

--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -15,7 +15,7 @@ block content
   if !isEmployer
     
     h3
-      a(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/employer_signup") Click here to see candidates
+      a#see-candidates(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/employer_signup") Click here to see candidates
       
   if candidates.length
     table.table.table-condensed.table-hover.table-responsive.tablesorter
