Code review of 97d3b6.

--- a/app/templates/modal/employer_signup_modal.jade
+++ b/app/templates/modal/employer_signup_modal.jade
@@ -63,6 +63,6 @@ block modal-footer
       button.btn.btn-primary(id="contract-agreement-button") I agree
   else
     .modal-footer.linkedin
-       | Thanks #{firstName}! You've already agreed to the contract.
+       | Thanks! You've already agreed to the contract.
     
     
