Improved legibility of gold font. Moved Done button to not conflict with gold display.

--- a/app/styles/play/level/gold.sass
+++ b/app/styles/play/level/gold.sass
@@ -7,7 +7,7 @@
   user-select: none
   -webkit-user-select: none
 
-  h3
+  .team-gold
     font-size: 16px
     margin: 0
     line-height: 20px
@@ -27,7 +27,8 @@
       width: 16px
       height: 16px
       border-radius: 2px
-      padding: 2px
+      padding: 1px
+      margin-top: -1px
       @include gradient-radial-custom-stops(hsla(205,0%,74%,1), 20%, hsla(205,0%,31%,1), 70%)
   
     &.team-humans img
