--- a/app/templates/play/level/control_bar.jade
+++ b/app/templates/play/level/control_bar.jade
@@ -17,4 +17,4 @@ if spectateGame
 
 button.btn.btn-xs.btn-inverse.banner#restart-button(title="Reload all custom code to reset level", data-i18n="play_level.restart") Restart
 
-button.btn.btn-xs.btn-primary.banner.secret#level-done-button(data-i18n="play_level.done") Done
+button.btn.btn-xs.btn-primary.banner#level-done-button(data-i18n="play_level.done") Done
